unpackaged/main/default/objects/OrderDetails__x/OrderDetails__x.object-meta.xml
<CustomObject>
    <description>OrderDetails</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>OrderDetails</externalName>
    <label>OrderDetails</label>
    <pluralLabel>OrderDetails</pluralLabel>
</CustomObject>