unpackaged/main/default/objects/OrderDetails__x/fields/orderID__c.field-meta.xml
<CustomField>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>orderID</label>
        <length>18</length>
        <referenceTo>Orders__x</referenceTo>
        <relationshipLabel>OrderDetails</relationshipLabel>
        <relationshipName>OrderDetails</relationshipName>
        <type>ExternalLookup</type>
    </CustomField>