unpackaged/main/default/objects/OrderDetails__x/fields/orderLine__c.field-meta.xml
<CustomField>
        <fullName>orderLine__c</fullName>
        <description>orderLine</description>
        <externalDeveloperName>orderLine</externalDeveloperName>
        <label>orderLine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>