unpackaged/main/default/objects/OrderDetails__x/fields/product__c.field-meta.xml
<CustomField>
        <fullName>product__c</fullName>
        <description>product</description>
        <externalDeveloperName>product</externalDeveloperName>
        <label>product</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>