unpackaged/main/default/objects/OrderDetails__x/fields/quantity__c.field-meta.xml
<CustomField>
        <fullName>quantity__c</fullName>
        <description>quantity</description>
        <externalDeveloperName>quantity</externalDeveloperName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>