unpackaged/main/default/objects/OrderDetails__x/fields/unitPrice__c.field-meta.xml
<CustomField>
        <fullName>unitPrice__c</fullName>
        <description>unitPrice</description>
        <externalDeveloperName>unitPrice</externalDeveloperName>
        <label>unitPrice</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </CustomField>